fixed merge branch errors